home.css
.welcomep {
    text-align: center;
    font-size: large;
}

.container img {
    width: 70%;
    height: auto;
    transition: all 0.4s;
    border: 1px solid white;
    /* object-fit: cover; */
}

.container img:hover {
    transform: scale(1.05);
    transition-duration: .4s;
}

.big-article-title {
    font-size: 24px;
    margin-top: 10px;
    text-align: center;
}

.welcomep {
    font-size: 22px;
    max-width: 60%;
    text-align: center;
}

.opening-message {
    display: flex;
    justify-content: center;
    margin-top: 20px;
}

@media (max-width: 650px) {
    .container {
        grid-template-columns: auto;
    }
    .container img {
        width: 100%;
        height: auto;
    }
    .welcomep {
        font-size: small;
        max-width: 100%;
    }
    .read-more-btn {
        text-align: center;
        /* padding: 5px 12px; */
        justify-content: center;
    }
    .opening-message {
        margin-right: 20px;
        margin-left: 20px;
    }
}

